feat: implement animation generation system
Adds complete animation generation functionality to Forge:

- Two-section Forge: 'Sprite Generation' and 'Animation Generation' tabs
- Animation presets: idle, walk, run, attack, hurt, cast, jump, emote, custom
- Source sprite selector from generated sprites
- Frame sequence builder with visual frame cards
- Configurable FPS (1-60), loop toggle, duration display
- Real-time animation preview with play/pause/reset controls
- GIF export using gif.js library
- Sprite sheet export (horizontal PNG strip)
- Toast notifications for export success/failure

Dependencies:
- Added gif.js for client-side GIF generation
- Added gif.worker.js to public folder

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sprite ETL Pipeline for Monster-Battling RPG - Converts sprites into full RPG-ready monster data",
   "private": true,
   "dependencies": {
+    "gif.js": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
